// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Injects docgen result as __docgenInfo property 1`] = `
Object {
  "description": "",
  "displayName": "basic-sfc",
  "exportName": "default",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "'bar'",
      },
      "description": "Description of foo.",
      "name": "foo",
      "type": Object {
        "name": "string",
      },
    },
  ],
  "tags": Object {},
}
`;

exports[`Injects docgen result for default-exported non-SFC 1`] = `
Object {
  "description": "",
  "displayName": "basicDefault.vue",
  "exportName": "default",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": Object {
        "name": "number",
      },
    },
  ],
  "tags": Object {},
}
`;

exports[`Injects docgen result for non-SFC 1`] = `
Object {
  "description": "",
  "displayName": "basic.vue",
  "exportName": "MyButton",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": Object {
        "name": "number",
      },
    },
  ],
  "tags": Object {},
}
`;

exports[`Injects docgen result non-SFC with multiple exports 1`] = `
Object {
  "description": "",
  "exportName": "MyButton1",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": Object {
        "name": "number",
      },
    },
  ],
  "tags": Object {},
}
`;

exports[`Injects docgen result non-SFC with multiple exports 2`] = `
Object {
  "description": "",
  "exportName": "MyButton2",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "-1",
      },
      "description": "Foo the number.",
      "name": "foo",
      "type": Object {
        "name": "number",
      },
    },
  ],
  "tags": Object {},
}
`;

exports[`Should ignore props/events with @ignore JSDoc tag 1`] = `
Object {
  "description": "",
  "displayName": "ignore",
  "events": Array [
    Object {
      "description": "Not ignored.",
      "name": "qux",
    },
  ],
  "exportName": "default",
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "Infinity",
      },
      "description": "Not ignored.",
      "name": "bar",
      "type": Object {
        "name": "number",
      },
    },
  ],
  "slots": Array [],
  "tags": Object {},
}
`;
